--- a/MBServerMonitor.csproj
+++ b/MBServerMonitor.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <StartupObject>MBServerMonitor.Program</StartupObject>
+    <ApplicationIcon>mb-monitoring.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
